--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 		<div class="content">
 			<div id="pagetitle" class="subtitle">用户信息</div>
 			<div class="search-area">
-				<input type="text" class="">
+				<input id="search" type="text" class="">
 				<button type="button" class="">批量导入</button>
 				<button type="button" class="">高级选项</button>
 				<button type="button" class="">查询结果</button>
@@ -91,9 +91,9 @@
 	<div class="modal">
 		<div class="data-area">
 			<p class="text-right"><i class="fa fa-close close"></i></p>
-			<textarea class="search-list" placeholder="每行一条数据"></textarea>
+			<textarea id="numbers" class="search-list" placeholder="每行一条数据"></textarea>
 			<div class="btn-area">
-				<button type="button">导入</button>
+				<button id="input" type="button">导入</button>
 			</div>
 		</div>
 	</div>
