--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 			</ul>
 		</div>
 		<div class="content">
-			<div id="pagetitle" class="subtitle">用户信息</div>
+			<!-- <div id="pagetitle" class="subtitle">用户信息</div>
 			<div class="search-area">
 				<input id="search" type="text" class="">
 				<button type="button" class="">批量导入</button>
@@ -85,7 +85,7 @@
 						</tr>
 					</table>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<div class="modal">
