--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 	<title>农场后台管理系统</title>
 	<link rel="stylesheet" type="text/css" href="css/basic.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
 	<div class="page">
