--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 			<ul>
 				<li><i class="fa fa-angle-right"></i>用户信息</li>
 				<li><i class="fa fa-angle-right"></i>邀请统计</li>
-				<li><i class="fa fa-angle-right"></i>function3</li>
+				<!-- <li><i class="fa fa-angle-right"></i>function3</li> -->
 			</ul>
 		</div>
 		<div class="content">
