--- a/home.html
+++ b/home.html
@@ -13,6 +13,10 @@
 			<div class="title">
 				农场后台管理系统
 			</div>
+			<div class="user">
+				<span>Admin, </span>
+				<span>Logout</span>
+			</div>
 		</div>
 		<div class="menu">
 			<ul>
