--- a/login.html
+++ b/login.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>请登陆</title>
+	<link rel="stylesheet" type="text/css" href="css/basic.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
-
+	<div class="page">
+		<div class="header">
+			<div class="title">
+				农场后台管理系统
+			</div>
+		</div>
+		<div class="box">
+			<div>
+				<span>请登录</span>
+			</div>
+			<div>
+				<span>账号：</span>
+				<input type="text" >
+			</div>
+			<div>
+				<span>密码：</span>
+				<input type="password" >
+			</div>
+			<div>
+				<button type="button">登陆</button>
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
+	<script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
